                                                         -*- coding: utf-8 -*-

Changes with Apache Traffic Server 3.1.0
  *) [TS-798] We add broken remap rules when we encounter parse errors of
   remap.config.


Changes with Apache Traffic Server 3.0.0
  *) [TS-810] Typo in switch statement + slight improvement.

  *) [TS-809] ts.h broken when compiling C plugins.


Changes with Apache Traffic Server 2.1.9
  *) [TS-805] HostDB wastes a lot of storage for round-robin entries,
   and the calculations of size are off.

  *) [TS-806] TS_ADDTO removes duplicates, so avoid this by using the
   -R option to libtool

  *) [TS-793] Improve print statements for ink_freelist debugging.

  *) [TS-679] The external API was changed to make it IPv6 compliant
     (although it doesn't actually work with IPv6). Old API functions
     were deprecated but not removed.

  *) [TS-797] Wrong delete used in stats processor.

  *) [TS-769] Fixed infinite loop when getting a 505 response from the
   origin and the connection is keep-alive.  Now downgrading keep-alive
   all the time along with the protocol.

  *) [TS-788] Cleaned up the request and response cacheable apis.

  *) [TS-792] Add a config option (disabled by default) to support
  mlock() and mlockall().

  *) [TS-783] Port ATS to IA64. Author: Arno Toell.

  *) [TS-778] Compile Fails on Solaris 10 (gcc). Author: Igor Brezac.

  *) [TS-404] Add a new API, TSOSIpSet() which allows you to bypass the
    origin server DNS lookup.

  *) [TS-791] Remove ShmemClean.cc, it's no longer needed.

  *) [TS-786] Add a perl module to edit a records.config configuration
  file.

  *) [TS-779] Set thread name for various event types.

  *) [TS-784] Don not use class allocator for remap processing when no
   remap threads are enabled.

  *) [TS-782] Remap processor creates a remap thread even when asked not
   to. 

  *) [TS-781] Cleanup of unusual configs, and better defaults making
   records.config leaner, and a little more useful. 
